Alignment issues resolved

--- a/homestyles.css
+++ b/homestyles.css
@@ -72,6 +72,7 @@ body {
 }
 .join > h1{
     font-size: 50px;
+    text-align: left;
 }
 /*Join Us Block*/
 
